server/kubernetes/mosquitto/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker-external
  namespace: mosquitto
spec:
  type: ClusterIP
  ports:
  - port: 8883
    targetPort: 8883
    name: mqttssl
  selector:
    app: broker
  externalIPs: ["116.202.187.121"]
