server/kubernetes/mosquitto/svc_internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker-internal
  namespace: mosquitto
spec:
  type: ClusterIP
  ports:
  - port: 1883
    targetPort: 1883
    name: mqtt
  - port: 9001
    targetPort: 9001
    name: ws
  selector:
    app: broker
